src/gatsby/assets/styles/_demo.css
/**
 * demo
 */

#gatsby_body-inner {
  visibility: hidden;
  position: relative;
  height: 100vh;
  height: calc(var(--vh, 1vh) * 100);
}

.gatsby_iframe-inside {
  body {
    overflow-x: hidden;
    overflow-y: scroll;
    background: theme('colors.white') !important;
    @apply xt-overflow-main;
  }
  #gatsby_body-inner {
    visibility: visible;
    height: initial;
    max-width: none;
    .gatsby_iframe-container& {
      @apply p-4 md:p-6 lg:p-8;
    }
  }
}

.gatsby_demo_source {
  @apply relative p-4 md:p-6 lg:p-8;
  #gatsby_open-full & {
    @apply z-0;
  }
}

.gatsby_demo_source--overflow {
  padding: 0 !important;
  overflow: hidden;
}

/**
 * code
 */

pre[class*="language-"] {
  @apply xt-overflow-sub my-5 xt-my-auto py-5 px-5 bg-code;
  width: 100%;
  border-radius: 6px;
  .gatsby_demo_code_body & {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    #gatsby_open-full & {
      border-radius: 0;
    }
  }
  border: 0 !important;
  line-height: 0 !important;
  font-size: 1rem;
  code {
    width: 100%;
    background: transparent !important;
    @apply font-mono;
    font-size: .875em;
    line-height: 1.7142857;
  }
}

/**
 * .demo
 */

pre {
  max-height: 21rem;
}

.gatsby_demo {
  @apply my-5 xt-my-auto;
  border-radius: 6px;
  pre {
    border-width: 0 !important;
  }
  @apply border-3 border-gray-200;
  #gatsby_open-full & {
    border: 0 !important;
    .gatsby_demo_code_body,
    .gatsby_demo_item:not(.populated-iframe) {
      overflow-x: hidden;
      overflow-y: scroll;
      @apply xt-overflow-main;
    }
    .gatsby_demo_tabs_right {
      > * {
        opacity: 1 !important;
        transform: initial !important;
      }
    }
  }
}

.gatsby_demo_tabs {
  @apply bg-gray-200;
}

.gatsby_demo_code_tabs {
  @apply bg-code;
}

.gatsby_demo_code_body {
  #gatsby_open-full & {
    @apply bg-code;
  }
}

.gatsby_demo_tabs {
  position: relative;
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  padding: 10px;
  .xt-button {
    padding: .5em .75em;
    font-size: 12px;
    @apply text-black text-opacity-50 font-semibold leading-tight tracking-normal capitalize rounded-md border-gray-200 bg-gray-200 transition;
    &:hover, &.in {
      @apply border-white bg-white text-opacity-100;
    }
  }
}

.gatsby_demo_code_tabs {
  position: relative;
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  padding: 10px;
  .xt-button {
    padding: .5em .75em;
    font-size: 12px;
    @apply text-white font-semibold leading-tight tracking-normal capitalize rounded-md border-code bg-code transition;
    &:hover, &.in {
      @apply bg-gray-800;
    }
  }
}

.gatsby_demo_tabs_right, .gatsby_demo_code_tabs_right {
  flex-wrap: nowrap;
}

.gatsby_demo_tabs_inner {
  margin-top: -3px;
}

.gatsby_demo_source {
  &:not(.gatsby_demo_source--from) {
    display: none !important;
  }
}

.gatsby_demo_item {
  position: relative;
  height: 100%;
  .gatsby_demo_item_wrapper {
    position: relative;
    #gatsby_open-full & {
      height: auto !important;
    }
  }
  .gatsby_demo_code {
    order: 2;
    @media (max-width: calc(theme('screens.lg') - 1px)) {
      /*@apply xt-toggle;*/
      &:not(.on):not(.in):not(.out) {
        display: none;
      }
    }
    #gatsby_open-full & {
      @apply xt-toggle !important;
      z-index: theme('zIndex.10');
      order: -1;
      position: absolute;
      width: 100%;
      height: 100%;
    }
    .gatsby_demo_code_body {
      @apply bg-code;
      height: 21rem;
      #gatsby_open-full & {
        height: auto;
        flex: 1;
      }
    }
    .gatsby_demo_code_inner {
      display: flex;
      flex-flow: column;
      height: 100%;
    }
    .gatsby_demo_code_inner:not(.xt-toggle-init) {
      .gatsby_demo_code_body_item:first-child {
        display: block !important
      }
    }
    .gatsby_demo_code_body_item {
      @apply xt-toggle;
      display: flex;
      align-items: stretch;
      height: 21rem;
      #gatsby_open-full & {
        height: 100%;
      }
    }
  }
  &[data-iframe] {
    &.loaded {
      .gatsby_demo_item_wrapper > .xt-loader {
        display: none;
      }
    }
    iframe {
      display: block;
      width: 100%;
      height: 0;
      border: 0;
      height: 36rem;
      #gatsby_open-full & {
        height: auto;
      }
    }
  }
  &:not(.populated) {
    .gatsby_demo_code_body {
      width: 100%;
      overflow: hidden;
    }
  }
}

[data-gatsby-listing-toggle] + .gatsby_demo {
  display: none;
}

.gatsby_demo, .gatsby_demo_item, .gatsby_demo_item_wrapper, .gatsby_demo_item_wrapper iframe {
  display: flex;
  flex-direction: column;
  #gatsby_open-full & {
    flex: 1 1 auto;
    width: 100%;
  }
}

.button--show-code {
  display: none;
  #gatsby_open-full & {
    display: inline-flex;
  }
}

.button--open-iframe-container {
  display: none !important;
}

.button--open-iframe {
  padding-top: 0.4em !important;
  padding-bottom: 0.4em !important;
  > span {
    display: inline-block;
    position: relative;
    top: auto !important;
    margin-top: -.5em;
    margin-bottom: -.5em;
  }
}

#gatsby_open-full {
  position: fixed;
  z-index: theme('zIndex.above');
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  @apply bg-white;
  @screen lg {
    margin-left: 20rem;
  }
  @screen xl {
    margin-left: 20rem;
  }
  > .xt-dismiss {
    @apply text-white rounded-md border-primary-500 bg-primary-500 hover:text-opacity-75 hover:border-primary-600 hover:bg-primary-600;
    top: 0;
    right: 0;
    border-radius: 0;
    padding: 10px;
    .xt-icon {
      width: 27px;
      height: auto;
    }
  }
  .gatsby_demo_tabs_right {
    padding-right: 45px;
  }
  .button--open-full-container {
    display: none !important;
  }
  .button--open-iframe-container.gatsby_with-iframe {
    display: block !important;
  }
}

#gatsby_open-full-content {
  display: flex;
  height: 100vh;
  height: calc(var(--vh, 1vh) * 100);
  pre {
    max-height: none;
  }
}

.gatsby_table {
  border-collapse: separate;
  border-spacing: 0;
  border-radius: 6px;
  border: 2px solid theme('colors.gray.200');
  th, td {
    border: 1px solid theme('colors.gray.200');
  }
  th, td:first-child {
    @apply py-2 px-4 text-xs font-semibold leading-snug tracking-wider uppercase text-left;
  }
  td {
    @apply py-2.5 px-5 text-sm leading-snug;
  }
}

